project 'about' updates

--- a/site/projects/2011_12_21_move_text.md
+++ b/site/projects/2011_12_21_move_text.md
@@ -9,7 +9,9 @@ header: Sublime Text 2 Plugin
 tags:
   - Sublime Plugins
 
-about: Select text and drag it around, or setup a text “tunnel” to move code from one location to another.
+about: >
+  Select text and drag it around, or setup a text “tunnel” to move code from one location to another.
+
 github: colinta/SublimeMoveText
 ---
 {% extends 'layouts/project.j2' %}
